# ngsMumps

./: CMakeLists.txt  README.md  ngsolve_addon.cmake  pyproject.toml
demos/: example1.py
src/: __init__.py  mumpsinverse.cpp  mumpsinverse.hpp  ngsMumps.cpp
